# CommDebugTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/CommDebugTool/: CommunicationWorker.h  MainWindow.h  ProtocolHandler.h
src/: CommunicationWorker.cpp  MainWindow.cpp  main.cpp
ui/: MainWindow.ui
